services/cacheloc/k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cacheloc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cacheloc
spec:
  hosts:
  - "*"
  gateways:
  - cacheloc-gateway
  http:
  - match:
    - uri:
        exact: /api/locations
    route:
    - destination:
        host: cacheloc
        port:
          number: 8080
